# slice-cli

./: .docs-librarian.json  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  slices_cli.py  slices_cli_upstream.py  test_slices_cli.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
agents/: codebase-slicer.md
bench/: compare-rust-python.sh  python-baseline.md  run.py  rust-baseline-meals.md  rust-baseline.md
design/: agent-facing-surface-consolidation-plan-v2.md  agent-workflows.md  architecture.md  briefing.md  idealised-paths.md  manifest-schema.md  migration-guide.md  package-refactor-plan.md  platform-evaluation.md  rust-gap-closure-plan.md  rust-prototype-plan.md  rust-test-parity-gap-map.md  slice-cli-feature-map.md  slice-context-discovery-plan.md
docs/: agent-workflows.md  api-reference.md  architecture.md  auth-guide.md  data-model.md  manifest-schema.md  navigating.md  setup.md  slice-context-discovery-plan.md  verification-links.md
docs/design/: agent-facing-surface-consolidation-plan-v2.md  idealised-paths.md  slice-cli-feature-map.md
examples/mock-repo/slices/: DOCS.yaml  INDEX.md  api-handlers.md  auth-service.md  data-model.md
examples/mock-repo/tests/: test_auth.py  test_sessions.py
rust/slice-rs/: Cargo.toml  about.hbs  about.toml
rust/slice-rs/src/: check.rs  cli.rs  color.rs  commands.rs  config.rs  context.rs  error.rs  git_backend.rs  index.rs  init.rs  lib.rs  main.rs  manifest.rs  models.rs  paths.rs  semantic.rs  slices.rs  symbols.rs  symbols_ast.rs
rust/slice-rs/tests/: cli.rs  parity.rs
skills/slice-codebase/: SKILL.md
slice_cli/: __init__.py  __main__.py  bootstrap.py  check.py  cli.py  commands.py  config.py  context.py  drift.py  fingerprint.py  index.py  init.py  models.py  paths.py  persistence.py  render.py  selection.py
slices/: DOCS.yaml  INDEX.md  api-handlers.md  auth-service.md  data-model.md
src/api/: handlers.py  routes.py
src/auth/: middleware.py  sessions.py
src/models/: user.py
