[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slice-cli"
version = "0.1.0"
description = "Navigate codebase slice documents and track whether design docs are stale relative to the code they describe."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Scott Hodge" }]
keywords = ["documentation", "staleness", "codebase", "agents", "cli"]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/scodge-24/slice-cli"
Source = "https://github.com/scodge-24/slice-cli"

[project.scripts]
slice = "slice_cli.cli:main"

[project.optional-dependencies]
dev = ["build>=1", "pytest>=7", "pyright>=1.1"]

[tool.setuptools]
packages = ["slice_cli"]

[tool.pytest.ini_options]
testpaths = ["."]
# examples/mock-repo is sample data the CLI runs against, not part of this
# project's suite — its tests import `src.*` relative to the mock repo root and
# only run via `pytest` from inside examples/mock-repo.
addopts = "-q --ignore=examples"

[tool.coverage.run]
source = ["slice_cli"]
omit = ["test_*.py", "slices_cli_upstream.py"]

[tool.pyright]
include = ["slice_cli", "test_slices_cli.py"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
