[package]
name = "slice-rs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
