[package]
name = "slice-rs"
version = "0.2.0"
edition = "2024"
license = "MIT"
publish = false

# The installed/shipped command is `slice` (the Rust binary is the primary CLI).
[[bin]]
name = "slice"
path = "src/main.rs"

[features]
default = []
# Stage 3: swap a Tree-sitter AST backend in behind symbols.rs's span queries. OFF by default so
# the shipped binary stays zero-heavy-deps (invariant #4); turning it on is the opt-in that pays the
# grammar-dep cost. Even in an `ast` build, `SLICE_SYMBOLS=heuristic` forces the old path at runtime.
ast = ["dep:tree-sitter", "dep:tree-sitter-python"]
# Stage 4: semantic / hybrid retrieval lens. OFF by default — pulls an HTTP client (`ureq`) for the
# embedding provider, so it stays opt-in (invariant #4). The provider is a trait; OpenRouter is the
# first backend, a local/offline embedder can drop in behind the same interface later.
semantic = ["dep:ureq"]

[dependencies]
anstyle = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
pathdiff = "0.2"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
sha2 = "0.10"
thiserror = "2"
tree-sitter = { version = "0.26", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
ureq = { version = "2", optional = true, features = ["json"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
